--- a/src/Components/Layout/Main/Body.module.css
+++ b/src/Components/Layout/Main/Body.module.css
@@ -1,5 +1,22 @@
 .body {
   display: flex;
   flex-direction: row;
-  margin-top: 5em;
+}
+
+.selectorBox {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
+.pomodoroSelector {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  /* border: 2px solid white; */
+  margin-top: 2em;
+  margin-bottom: 2em;
+  width: 510px;
+  justify-content: space-between;
 }
