--- a/src/Components/Layout/Tasks/Table.module.css
+++ b/src/Components/Layout/Tasks/Table.module.css
@@ -2,7 +2,12 @@
   display: flex;
   flex-direction: column;
   /* flex-grow: 1; */
-  width:50%;
+  width: 50%;
   /* align-items: center; */
   border: 2px yellow solid;
+}
+
+.taskBox {
+  display: flex;
+  align-items: center;
 }
