deleting local storage working

--- a/src/Components/Layout/Tasks/Table.module.css
+++ b/src/Components/Layout/Tasks/Table.module.css
@@ -11,3 +11,10 @@
   display: flex;
   align-items: center;
 }
+
+.taskList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
