--- a/src/Components/Layout/Tasks/Tasks.module.css
+++ b/src/Components/Layout/Tasks/Tasks.module.css
@@ -5,4 +5,20 @@
   flex-direction: column;
   align-items: center;
   color: white;
+  border-radius: 50px;
+}
+
+.time-1500 {
+  /* pomodoro */
+  background-color: #30497c;
+}
+
+.time-600 {
+  /* long break */
+  background-color: #528a11;
+}
+
+.time-300 {
+  /* short break */
+  background-color: #eca51f;
 }
