--- a/src/Components/Layout/Main/Body.module.css
+++ b/src/Components/Layout/Main/Body.module.css
@@ -1,6 +1,9 @@
 .body {
   display: flex;
   flex-direction: row;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  /* margin-left: 10px; */
 }
 
 .selectorBox {
