--- a/src/Components/Layout/Tasks/Table.module.css
+++ b/src/Components/Layout/Tasks/Table.module.css
@@ -4,7 +4,7 @@
   /* flex-grow: 1; */
   width: 50%;
   /* align-items: center; */
-  border: 2px yellow solid;
+  /* border: 2px yellow solid; */
 }
 
 .taskBox {
