--- a/src/Components/Layout/Tasks/Tasks.module.css
+++ b/src/Components/Layout/Tasks/Tasks.module.css
@@ -1,24 +1,28 @@
 .taskContainer {
   width: 40%;
   display: flex;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   flex-direction: column;
   align-items: center;
   color: white;
   border-radius: 50px;
+  margin-left: 10px;
 }
 
 .time-1500 {
   /* pomodoro */
   background-color: #30497c;
+  border: 2px solid #032872;
 }
 
 .time-600 {
   /* long break */
   background-color: #528a11;
+  border: 2px solid #3d6d06;
 }
 
 .time-300 {
   /* short break */
   background-color: #eca51f;
+  border: 2px solid #aa730c;
 }
