styling colours for buttons and background

--- a/src/Components/Layout/Timer/Timer.module.css
+++ b/src/Components/Layout/Timer/Timer.module.css
@@ -7,8 +7,10 @@
   align-items: center;
   color: white;
   border-radius: 50px;
-
-  padding: 50px;
+  margin-right: 50px;
+  /* padding: 50px; */
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .timer {
