--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -5,12 +5,12 @@
   justify-content: center;
   color: beige;
   height: 5em;
-  background-color: #282c34;
+  /* background-color: #282c34; */
 }
 
 .headerContainer {
-  border-left: 4px solid #6b6f75;
-  border-right: 4px solid #6b6f75;
+  /* border-left: 4px solid #6b6f75;
+  border-right: 4px solid #6b6f75; */
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -38,5 +38,20 @@
   display: flex;
 }
 
-.link:last-child {
+.time-1500 {
+  /* pomodoro */
+  background-color: #30497c;
+
+}
+
+.time-600 {
+  /* long break */
+  background-color: #528a11;
+
+}
+
+.time-300 {
+  /* short break */
+  background-color: #eca51f;
+
 }
