--- a/src/Components/Layout/Timer/Timer.module.css
+++ b/src/Components/Layout/Timer/Timer.module.css
@@ -11,6 +11,7 @@
   /* padding: 50px; */
   padding-top: 50px;
   padding-bottom: 50px;
+  /* min-height: 80vh; */
 }
 
 .timer {
@@ -29,18 +30,31 @@
 
 .time-1500 {
   /* pomodoro */
-  background-color: #30497c;
-  border: 2px solid #032872;
+  /* background-color: #30497c; */
+  /* background-color: #9c231f; */
+  background-color: #d45e5a;
+  border: 2px solid #c73e39;;
+  -webkit-transition: background-color 1000ms linear;
+  -ms-transition: background-color 1000ms linear;
+  transition: background-color 1000ms linear;
 }
 
 .time-600 {
   /* long break */
-  background-color: #528a11;
+  /* background-color: #528a11; */
+  background-color: #91bb61;
   border: 2px solid #3d6d06;
+  -webkit-transition: background-color 1000ms linear;
+  -ms-transition: background-color 1000ms linear;
+  transition: background-color 1000ms linear;
 }
 
 .time-300 {
   /* short break */
-  background-color: #eca51f;
+  /* background-color: #eca51f; */
+  background-color: #f0ba55;
   border: 2px solid #aa730c;
+  -webkit-transition: background-color 1000ms linear;
+  -ms-transition: background-color 1000ms linear;
+  transition: background-color 1000ms linear;
 }
