--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -40,18 +40,28 @@
 
 .time-1500 {
   /* pomodoro */
-  background-color: #30497c;
+  /* background-color: #30497c; */
+  background-color: #9c231f;
+  -webkit-transition: background-color 1000ms linear;
+  -ms-transition: background-color 1000ms linear;
+  transition: background-color 1000ms linear;
 
 }
 
 .time-600 {
   /* long break */
   background-color: #528a11;
+  -webkit-transition: background-color 1000ms linear;
+  -ms-transition: background-color 1000ms linear;
+  transition: background-color 1000ms linear;
 
 }
 
 .time-300 {
   /* short break */
   background-color: #eca51f;
+  -webkit-transition: background-color 1000ms linear;
+  -ms-transition: background-color 1000ms linear;
+  transition: background-color 1000ms linear;
 
 }
