--- a/src/Components/Layout/Tasks/Tasks.module.css
+++ b/src/Components/Layout/Tasks/Tasks.module.css
@@ -12,18 +12,18 @@
 
 .time-1500 {
   /* pomodoro */
-  background-color: #30497c;
-  border: 2px solid #032872;
+  background-color: #af332e;
+  /* border: 2px solid #032872; */
 }
 
 .time-600 {
   /* long break */
   background-color: #528a11;
-  border: 2px solid #3d6d06;
+  /* border: 2px solid #3d6d06; */
 }
 
 .time-300 {
   /* short break */
   background-color: #eca51f;
-  border: 2px solid #aa730c;
+  /* border: 2px solid #aa730c; */
 }
