--- a/src/Components/Layout/Tasks/Tasks.module.css
+++ b/src/Components/Layout/Tasks/Tasks.module.css
@@ -1,7 +1,8 @@
 .taskContainer {
   width: 40%;
   display: flex;
-  /* border: 2px solid green; */
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  background: rgba(0, 0, 0, 0.25);
   flex-direction: column;
   align-items: center;
   color: white;
@@ -10,20 +11,20 @@
   padding-top: 50px;
 }
 
-.time-1500 {
+/* .time-1500 { */
   /* pomodoro */
-  background-color: #af332e;
+  /* background-color: #af332e; */
   /* border: 2px solid #032872; */
-}
+/* } */
 
-.time-600 {
+/* .time-600 { */
   /* long break */
-  background-color: #528a11;
+  /* background-color: #528a11; */
   /* border: 2px solid #3d6d06; */
-}
+/* } */
 
-.time-300 {
+/* .time-300 { */
   /* short break */
-  background-color: #eca51f;
+  /* background-color: #eca51f; */
   /* border: 2px solid #aa730c; */
-}
+/* } */
