--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -18,7 +18,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  width: 40%;
+  /* width: 40%; */
   height: 100%;
 }
 
