--- a/src/Components/Layout/Tasks/TaskForm.module.css
+++ b/src/Components/Layout/Tasks/TaskForm.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  /* flex-grow: 1; */
 }
 
 .inputContainer {
@@ -12,6 +13,9 @@
   width: 100%;
   flex-direction: column;
   align-items: center;
+  padding-top: 1.5rem;
+  /* border: 2px solid rgba(255, 255, 255, 0.5); */
+  background: rgba(255, 255, 255, 0.25);
   /* padding-left: 20%; */
 }
 
