--- a/src/Components/Layout/Footer/Footer.module.css
+++ b/src/Components/Layout/Footer/Footer.module.css
@@ -1,36 +1,14 @@
 .footer {
-  background-color: rgb(243, 199, 117);
-  height: 3em;
+  border-top: 2px solid rgb(255, 255, 255);
+  background-color: rgba(245, 168, 27, 0.6);
+  height: 7em;
   justify-content: center;
   align-items: center;
   display: flex;
-  font-family: "Pangolin";
-}
-
-.time-1500 {
-  /* pomodoro */
-  /* background-color: #30497c; */
-  background-color: #9c231f;
+  flex-direction: column;
+  font-family: "roboto";
   -webkit-transition: background-color 1000ms linear;
   -ms-transition: background-color 1000ms linear;
   transition: background-color 1000ms linear;
-
-}
-
-.time-600 {
-  /* long break */
-  background-color: #528a11;
-  -webkit-transition: background-color 1000ms linear;
-  -ms-transition: background-color 1000ms linear;
-  transition: background-color 1000ms linear;
-
-}
-
-.time-300 {
-  /* short break */
-  background-color: #eca51f;
-  -webkit-transition: background-color 1000ms linear;
-  -ms-transition: background-color 1000ms linear;
-  transition: background-color 1000ms linear;
-
+  padding-top: 0.5rem;
 }
