--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -29,6 +29,7 @@
   align-items: center;
   flex-grow: 2;
   font-family: "Pangolin";
+  cursor: pointer;
 }
 
 .headerLinks {
@@ -48,7 +49,6 @@
   /* -webkit-transition: background-color 750ms linear;
   -ms-transition: background-color 750ms linear;
   transition: background-color 750ms linear; */
-
 }
 
 .time-600 {
@@ -57,7 +57,6 @@
   /* -webkit-transition: background-color 750ms linear;
   -ms-transition: background-color 750ms linear;
   transition: background-color 750ms linear; */
-
 }
 
 .time-300 {
@@ -66,5 +65,4 @@
   /* -webkit-transition: background-color 750ms linear;
   -ms-transition: background-color 750ms linear;
   transition: background-color 750ms linear; */
-
 }
