--- a/src/Components/Layout/Footer/Footer.module.css
+++ b/src/Components/Layout/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   border-top: 2px solid rgb(255, 255, 255);
-  background-color: rgba(245, 168, 27, 0.6);
+
   height: 7em;
   justify-content: center;
   align-items: center;
@@ -11,4 +11,13 @@
   -ms-transition: background-color 1000ms linear;
   transition: background-color 1000ms linear;
   padding-top: 0.5rem;
+}
+
+.time {
+  background-color: rgba(245, 168, 27, 0.6);
+}
+
+.night {
+  background-color: rgb(139, 91, 0, 0.6);
+  color: white;
 }
