--- a/src/Components/Layout/Tasks/IndividualTask.module.css
+++ b/src/Components/Layout/Tasks/IndividualTask.module.css
@@ -2,8 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 90%;
-  padding-left: 10%;
+  width: 80%;
+  background: white;
+  color: black;
+  border-radius: 50px;
+  /* padding-left: 40%;
+  padding-right: 30%; */
+  border: 2px solid black;
 }
 
 .checkBox {
