--- a/src/Components/Layout/Tasks/IndividualTask.module.css
+++ b/src/Components/Layout/Tasks/IndividualTask.module.css
@@ -1,14 +1,24 @@
 .task {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 80%;
-  background: white;
+  /* justify-content: space-between; */
+  width: 70%;
+  background: rgb(255, 255, 255, 0.9);
   color: black;
-  border-radius: 50px;
+  border-radius: 5px;
+  padding-right: 5%;
   /* padding-left: 40%;
   padding-right: 30%; */
-  border: 2px solid black;
+  /* border: 2px solid black; */
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+
+.infoBox {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
 .checkBox {
