--- a/src/Components/Layout/Tasks/Table.module.css
+++ b/src/Components/Layout/Tasks/Table.module.css
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   /* flex-grow: 1; */
-  width: 100%;
+  width: 70%;
   /* align-items: center; */
   /* border: 2px yellow solid; */
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+  margin-bottom: 10px;
 }
 
 .taskBox {
